Updated to Bootstrap 4.1.0

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -5,63 +5,41 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-@import 'bootstrap/functions';
-@import 'bootstrap/variables';
-@import 'bootstrap/mixins/_alert';
-@import 'bootstrap/mixins/_background-variant';
-@import 'bootstrap/mixins/_badge';
-@import 'bootstrap/mixins/_border-radius';
-@import 'bootstrap/mixins/_box-shadow';
-@import 'bootstrap/mixins/_breakpoints';
-@import 'bootstrap/mixins/_buttons';
-@import 'bootstrap/mixins/_clearfix';
-@import 'bootstrap/mixins/_float';
-@import 'bootstrap/mixins/_forms';
-@import 'bootstrap/mixins/_gradients';
-@import 'bootstrap/mixins/_grid';
-@import 'bootstrap/mixins/_grid-framework';
-@import 'bootstrap/mixins/_hover';
-@import 'bootstrap/mixins/_image';
-@import 'bootstrap/mixins/_list-group';
-@import 'bootstrap/mixins/_lists';
-@import 'bootstrap/mixins/_navbar-align';
-@import 'bootstrap/mixins/_nav-divider';
-@import 'bootstrap/mixins/_pagination';
-@import 'bootstrap/mixins/_reset-text';
-@import 'bootstrap/mixins/_resize';
-@import 'bootstrap/mixins/_screen-reader';
-@import 'bootstrap/mixins/_size';
-@import 'bootstrap/mixins/_table-row';
-@import 'bootstrap/mixins/_text-emphasis';
-@import 'bootstrap/mixins/_text-hide';
-@import 'bootstrap/mixins/_text-truncate';
-@import 'bootstrap/mixins/_transition';
-@import 'bootstrap/mixins/_visibility';
-@import 'bootstrap/reboot';
-@import 'bootstrap/type';
-@import 'bootstrap/images';
-@import 'bootstrap/grid';
-@import 'bootstrap/tables';
-@import 'bootstrap/forms';
-@import 'bootstrap/buttons';
-@import 'bootstrap/dropdown';
-@import 'bootstrap/button-group';
-@import 'bootstrap/input-group';
-@import 'bootstrap/card';
-@import 'bootstrap/breadcrumb';
-@import 'bootstrap/pagination';
-@import 'bootstrap/badge';
-@import 'bootstrap/alert';
-@import 'bootstrap/list-group';
-@import 'bootstrap/utilities';
-@import 'bootstrap/navbar';
-@import 'bootstrap/nav';
-@import 'bootstrap/modal';
-@import 'bootstrap/transitions';
-@import 'bootstrap/tooltip';
-@import 'bootstrap/popover';
-@import 'bootstrap/progress';
-@import 'bootstrap/jumbotron';
+ @import 'bootstrap/functions';
+ @import 'bootstrap/variables';
+ @import 'bootstrap/mixins';
+ @import 'bootstrap/root';
+ @import 'bootstrap/reboot';
+ @import 'bootstrap/type';
+ @import 'bootstrap/images';
+ @import 'bootstrap/code';
+ @import 'bootstrap/grid';
+ @import 'bootstrap/tables';
+ @import 'bootstrap/forms';
+ @import 'bootstrap/buttons';
+ @import 'bootstrap/transitions';
+ @import 'bootstrap/dropdown';
+ @import 'bootstrap/button-group';
+ @import 'bootstrap/input-group';
+ @import 'bootstrap/custom-forms';
+ @import 'bootstrap/nav';
+ @import 'bootstrap/navbar';
+ @import 'bootstrap/card';
+ @import 'bootstrap/breadcrumb';
+ @import 'bootstrap/pagination';
+ @import 'bootstrap/badge';
+ @import 'bootstrap/jumbotron';
+ @import 'bootstrap/alert';
+ @import 'bootstrap/progress';
+ @import 'bootstrap/media';
+ @import 'bootstrap/list-group';
+ @import 'bootstrap/close';
+ @import 'bootstrap/modal';
+ @import 'bootstrap/tooltip';
+ @import 'bootstrap/popover';
+ @import 'bootstrap/carousel';
+ @import 'bootstrap/utilities';
+ @import 'bootstrap/print';
 
 /**
  * Sipi v.3.7.0
