--- a/src/app/components/places/cards/place-location-card.component.html
+++ b/src/app/components/places/cards/place-location-card.component.html
@@ -1,29 +1,21 @@
 <div class="card">
-  <single-marker-map *ngIf="place.address.coordinates" class="card-img-top" [place]="place"></single-marker-map>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">
-      <!-- when not parent -->
-      <address class="card-text" *ngIf="place.organizational && !place.organizational.isParent">
-        {{place.address.number}}, {{place.address.street}}<br>
-        {{place.address.city}}, {{place.address.country}}<br>
-      </address>
-      <!-- when parent -->
-      <address class="card-text" *ngIf="place.organizational && place.organizational.isParent">
-        Varias ubicaciones en {{place.address.country}}<br>
-      </address>
-    </li>
-    <li class="list-group-item" *ngIf="place.contact.phone">
-      <i class="material-icons align-top">phone</i>&nbsp;{{place.contact.phone}}
-    </li>
-    <li class="list-group-item" *ngIf="place.contact.website">
-      <i class="material-icons align-top">web</i>
-      <a href="{{place.contact.website}}">&nbsp;{{place.contact.website}}</a>
-    </li>
-    <li class="list-group-item" *ngIf="place.contact.email">
+  <single-marker-map *ngIf="place.address.coordinates" class="card-img-top p-2" [place]="place"></single-marker-map>
+  <div class="card-body">
+    <address class="card-title pt-2 pb-2" *ngIf="place.organizational && !place.organizational.isParent">
+      {{place.address.number}}, {{place.address.street}}<br>
+      {{place.address.city}}, {{place.address.country}}<br>
+    </address>
+    <p class="card-text">
+      <i class="material-icons align-top">phone</i>&nbsp;{{place.contact.phone}}<br>
+      <i class="material-icons align-top">computer</i>
+      <a href="{{place.contact.website}}">&nbsp;{{place.contact.website}}</a><br>
       <i class="material-icons align-top">email</i>
       <a href="mailto:{{place.contact.email}}">&nbsp;{{place.contact.email}}</a>
-    </li>
-  </ul>
+    </p>
+  </div>
+  
+  
+ 
   <div class="card-footer text-muted">
     <small>
       Actualizado hace {{place.date.modified | ago}}
