--- a/src/app/components/modals/share-modal.component.html
+++ b/src/app/components/modals/share-modal.component.html
@@ -1,10 +1,12 @@
-<button class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#share-modal" type="button"><i class="align-top material-icons md-8">file_upload</i>Compartir</button>
+<button class="btn btn-light" data-toggle="modal" data-target="#share-modal" type="button">
+  <i class="align-top material-icons md-16">share</i>
+</button>
 
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
 
 <!-- Modal -->
-<div class="modal fade" id="share-modal" tabindex="-1" role="dialog" aria-labelledby="share-modal-label" aria-hidden="true">
+<div class="modal fade" id="share-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -14,20 +16,18 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Mira lo que encontre en Sipi!</p>
-        <p id="current-url">https://www.sipi.com{{returnUrl()}}</p>
-        
-        <p></p>
+        <p>¡Mira lo que encontre en Sipi!</p>
+        <p id="current-url">https://www.sipi.app{{returnUrl()}}</p>
         <ul class="list-group">
-          <li class="list-group-item">
+          <!-- <li class="list-group-item">
             <a class="twitter-share-button" href="https://twitter.com/intent/tweet">Compartir en Twitter</a>
-          </li>
+          </li> -->
           <li class="list-group-item">
-            <a (click)="sendByEmail()">Enviar por email</a>
+            <a [routerLink]="" (click)="sendByEmail()">Enviar por email</a>
           </li>
-          <li class="list-group-item">
+          <!-- <li class="list-group-item">
             <a (click)="copyLinkToClipboard()">Copiar ubicacion</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
