--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
 <footer class="outer-container brand-light-grey">
   <div class="container pt-4 pb-4">
     <div class="row">
-      <div class="col-12 col-sm-3 col-md-2 border-right d-none d-sm-none d-md-block">
+      <div class="col-12 col-sm-3 col-md-2 d-none d-sm-none d-md-block">
         <img src="/assets/svgs/sipi-logo.svg" width="60" height="60" alt="Sipi logo">
       </div>
-      <div class="col-12 col-sm-4 col-md-2 border-right">
+      <div class="col-12 col-sm-4 col-md-2">
         <h3 class="h6">Sipi</h3>
         <ul class="list">
           <li>
@@ -29,7 +29,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-12 col-sm-4 col-md-2 border-right">
+      <div class="col-12 col-sm-4 col-md-2">
         <!-- <h3 class="h6">Soluciones Empresariales</h3>
         <ul class="list">
           <li><a routerLink="publicidad">Publicidad</a></li>
