Redesigned to make container fluid and full width. Some structure reorg.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet>
-  <main-menu-auth></main-menu-auth>
+  <masthead></masthead>
 </router-outlet>
 
 <footer class="outer-container brand-light-grey">
