--- a/src/app/components/forms/filter-places-form.component.html
+++ b/src/app/components/forms/filter-places-form.component.html
@@ -1,5 +1,5 @@
-<!-- <section class="outer-container grey pt-3 pb-3">
-  <form class="container">
+<section class="grey pt-3 pb-3">
+  <form>
     <div class="row">
       <div class="col-4 col-sm-4 col-md-2 mb-3">
         <div aria-label="Basic example" class="btn-group" role="group">
@@ -32,7 +32,5 @@
         </div>
       </div>
     </div>
-
-    <filter-modal></filter-modal>
   </form>
-</section> -->
+</section>
