--- a/src/app/components/users/user-detail.component.html
+++ b/src/app/components/users/user-detail.component.html
@@ -1,4 +1,4 @@
-<main-menu-auth *ngIf="user" [user]="user"></main-menu-auth>
+<masthead *ngIf="user" [user]="user"></masthead>
 
 <main class="container mt-5 mb-5" *ngIf="user">
 
