--- a/src/app/components/pages/home-page.component.html
+++ b/src/app/components/pages/home-page.component.html
@@ -1,3 +1,4 @@
+<!-- <section class="outer-container homepage-image"> -->
 <section class="outer-container homepage-image">
   <div class="container pt-5 pb-5">
     <div class="row">
@@ -6,7 +7,7 @@
       </div>
     </div>
     <div class="mt-5 mb-5">
-      <search-form-a></search-form-a>
+      <search-form></search-form>
     </div>
   </div>
 </section>
@@ -18,55 +19,13 @@
   </div>
 </div>
 
-<section class="container">
+<section class="container-fluid pb-5">
   <div class="row">
-    <div class="col-12 col-sm-12">
-      <categories-list></categories-list>
+    <div class="col-12 col-sm-12 col-md-8">
+      <countries-list></countries-list>
     </div>
-  </div>
-</section>
-
-<section class="container pb-5">
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
-        <div class="col-12 col-sm-6 col-md-4">
-          <h3 class="h4">
-            <a routerLink="">Ciudad de Guatemala</a>
-          </h3>
-          <p>La ciudad de Guatemala, cuyo nombre oficial es Nueva Guatemala de la Asunción, es la capital y sede de los poderes gubernamentales de la República de Guatemala, así como sede del Parlamento Centroamericano.</p>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4">
-          <h3 class="h4">
-            <a routerLink="">San Salvador</a>
-          </h3>
-          <p>San Salvador es la capital de la República de El Salvador y la cabecera del departamento y municipio homónimos.</p>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4">
-          <h3 class="h4">
-            <a routerLink="">Tegucigalpa</a>
-          </h3>
-          <p>Tegucigalpa, oficialmente Tegucigalpa, Municipio del Distrito Central y abreviado como Tegucigalpa, M. D. C., es la capital y sede de gobierno de la República de Honduras, junto a su ciudad gemela Comayagüela.</p>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4">
-          <h3 class="h4">
-            <a routerLink="">Managua</a>
-          </h3>
-          <p>Managua es la ciudad capital de Nicaragua y cabecera del municipio y departamento homónimos, así como la sede del gobierno y los poderes del Estado.</p>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4">
-          <h3 class="h4">
-            <a routerLink="">San José</a>
-          </h3>
-          <p>San José es la capital de la República de Costa Rica y la cabecera de la provincia del mismo nombre.</p>
-        </div>
-        <div class="col-12 col-sm-6 col-md-4">
-          <h3 class="h4">
-            <a routerLink="">Ciudad de Panamá</a>
-          </h3>
-          <p>Panamá es la capital de la República de Panamá, de la provincia de Panamá y cabecera del distrito homónimo.</p>
-        </div>
-      </div>
+    <div class="col-12 col-sm-12 col-md-4">
+      <categories-list></categories-list>
     </div>
   </div>
 </section>
