--- a/src/app/components/places/place-detail.component.html
+++ b/src/app/components/places/place-detail.component.html
@@ -1,7 +1,7 @@
 <!-- <main class="container mt-5 mb-5" *ngIf="place"> -->
-<main class="container mt-5 mb-5" *ngIf="(place$ | async) as place; else loading">
+<main class="container-fluid mt-5 mb-5" *ngIf="(place$ | async) as place; else loading">
 
-  <div class="row mb-5">
+  <!-- <div class="row mb-5">
     <div class="col-12">
       <ul class="nav nav-tabs" id="place-tabs" role="tablist">
         <li class="nav-item">
@@ -12,10 +12,22 @@
         </li>
       </ul>
     </div>
-  </div>
+  </div> -->
   
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 col-sm-2">
+      <!-- A menu here? -->
+    </div>
+
+    <div class="col-12 col-sm-8">
+      <ul class="nav nav-tabs mb-5" id="place-tabs" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="info-tab" data-toggle="tab" href="#informacion" role="tab" aria-controls="info" aria-selected="true">
+            <i class="material-icons md-18 align-top">subject</i>
+            <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Información</span>
+          </a>
+        </li>
+      </ul>
       <div class="tab-content" id="place-tab-content">
         <!-- info section -->
         <div class="tab-pane fade show active" id="informacion">
@@ -23,6 +35,10 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="col-12 col-sm-2">
+    <!-- A menu here? -->
   </div>
 
   <ng-template #loading>Loading User Data...</ng-template>
