--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -1,27 +1,13 @@
-<!-- <filter-places-form (priceChanged)="filterByPrice($event)" (pricePredicateChanged)="handlePricePredicateChanged($event)"></filter-places-form> -->
-
-<div class="container mt-5 mb-5" *ngIf="places$ | async as places; else loading">
-
-  <div class="row d-block d-sm-block d-md-none d-lg-none d-xl-none mb-5">
-    <div class="col-12">
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link active" id="list-tab" data-toggle="tab" href="#list" role="tab" aria-controls="home" aria-selected="true">
-            <i class="material-icons md-18 align-top">list</i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="map-tab" data-toggle="tab" href="#map" role="tab" aria-controls="profile" aria-selected="false">
-            <i class="material-icons md-18 align-top">public</i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<div class="mb-5" *ngIf="places$ | async as places; else loading">
 
   <div class="row">
-    <div class="col-12 col-sm-12 col-md-7 tab-pane fade show active" id="list">
 
+    <div class="col-12 col-sm-12 col-md-2">
+      <!-- <filter-places-form></filter-places-form> -->
+    </div>
+
+    <!-- the places -->
+    <div class="col-12 col-sm-12 col-md-4 tab-pane fade show active mt-4" id="list">
       <div class="row">
         <div class="col-12 col-sm-4 col-md-6 col-lg-3 mb-4">
           <pagination-size-form (paginationNumberChanged)="handlePaginationSize($event)"></pagination-size-form>
@@ -30,18 +16,15 @@
           <sort-places-form (predicateChanged)="handlePredicateChanged($event)"></sort-places-form>
         </div>
       </div>
-      <!-- <div class="card mb-4" *ngFor="let place of places; let f = first"> -->
       <div class="card mb-4" *ngFor="let place of places | orderBy: orderPredicate: reverseOrder | paginate: { itemsPerPage: paginationSize, currentPage: p }">
         <place-list-card [place]="place"></place-list-card>
       </div>
       <pagination-controls nextLabel="Proximo" (pageChange)="p = $event" previousLabel="Anterior"></pagination-controls>
-
     </div>
 
-    <div class="col-12 col-sm-12 col-md-5 tab-pane fade show" id="map">
-
+    <!-- the map -->
+    <div class="col-12 col-sm-12 col-md-6 tab-pane fade show" id="map">
       <multi-marker-map (selectedPlace)="handleMarkerClick($event)" (mapBoundsChanged)="handleNewMapBounds($event)" [places]="places | paginate: { itemsPerPage: paginationSize, currentPage: p }"></multi-marker-map>
-    
     </div>
 
   </div>
