--- a/src/app/components/search-forms/search-form.component.html
+++ b/src/app/components/search-forms/search-form.component.html
@@ -1,5 +1,5 @@
 <form class="row" [formGroup]="search" (ngSubmit)="onSubmit(search)" novalidate>
-  <div class="col-12">
+  <div class="col">
     <div class="input-group">
       <input class="form-control"
              type="text"
@@ -10,7 +10,7 @@
              placeholder="¿Adonde? San Salvador, Panamá"
              formControlName="location" />
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" routerLink="/lugares">
+        <button type="submit" class="btn btn-primary rounded-0 rounded-right" routerLink="/lugares">
           <i class="material-icons md-14">search</i>
         </button>
       </span>
