Ran prod build.

--- a/src/app/components/forms/filter-places-form.component.html
+++ b/src/app/components/forms/filter-places-form.component.html
@@ -1,4 +1,4 @@
-<section class="grey pt-3 pb-3">
+<!-- <section class="grey pt-3 pb-3">
   <form>
     <div class="row">
       <div class="col-4 col-sm-4 col-md-2 mb-3">
@@ -33,4 +33,4 @@
       </div>
     </div>
   </form>
-</section>
+</section> -->
