Work on 4.0.0 restructuring.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,52 +1,5 @@
-<router-outlet>
-  <masthead></masthead>
-</router-outlet>
+<masthead></masthead>
 
-<footer class="outer-container brand-light-grey">
-  <div class="container pt-4 pb-4">
-    <div class="row">
-      <div class="col-12 col-sm-3 col-md-2 d-none d-sm-none d-md-block">
-        <img src="/assets/svgs/sipi-logo.svg" width="60" height="60" alt="Sipi logo">
-      </div>
-      <div class="col-12 col-sm-4 col-md-2">
-        <h3 class="h6">Sipi</h3>
-        <ul class="list">
-          <li>
-            <a routerLink="/lugares">Lugares</a>
-          </li>
-          <!-- <li><a routerLink="/categorias">Categorias</a></li> -->
-          <!-- <li><a routerLink="eventos">Eventos</a></li> -->
-        </ul>
-      </div>
-      <div class="col-12 col-sm-3 col-md-3">
-        <h3 class="h6">Empresa</h3>
-        <ul class="list">
-          <li>
-            <a routerLink="politica-de-privacidad">Política de Privacidad</a>
-          </li>
-          <li>
-            <a routerLink="condiciones-de-uso">Condiciones de Uso</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-12 col-sm-4 col-md-2">
-        <!-- <h3 class="h6">Soluciones Empresariales</h3>
-        <ul class="list">
-          <li><a routerLink="publicidad">Publicidad</a></li>
-        </ul> -->
-      </div>
-      <div class="col-12 col-md-3">
-        <!-- <p>
-          <small>
-            <a routerLink="politica-de-privacidad">Política de Privacidad</a>
-          </small>
-        </p> -->
-        <p>
-          <small>
-            <em>Derechos Reservados &copy; 2018 SIPI S.A de C.V</em>
-          </small>
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
+<router-outlet></router-outlet>
+
+<footer></footer>
